--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -7,7 +7,7 @@
    footer {
     width: 100%;
     height: 120px;
-    background-color: blue;
+    background-color: #001451;
     color: white;
    }
    
